--- a/src/GraphicUserInterface/MainWindow.fxml
+++ b/src/GraphicUserInterface/MainWindow.fxml
@@ -2,18 +2,29 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GraphicUserInterface.Controller">
-   <center>
-      <Button fx:id="playButton" mnemonicParsing="false" onAction="#play" text="Button" BorderPane.alignment="CENTER" />
-   </center>
-   <top>
-      <Label fx:id="informationLabel" text="Label" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="100.0" />
-         </BorderPane.margin>
-      </Label>
-   </top>
+  <top>
+    <HBox spacing="10.0">
+      <children>
+        <TextField fx:id="textArea" prefWidth="200.0" />
+        <Button fx:id="button" mnemonicParsing="false" onAction="#addFunction" text="Button" />
+        <Region minWidth="100.0" HBox.hgrow="ALWAYS" />
+        <MenuBar fx:id="menuBar">
+          <menus>
+            <Menu fx:id="menu" mnemonicParsing="false" text="Artists" />
+          </menus>
+        </MenuBar>
+      </children>
+      <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      </padding>
+    </HBox>
+  </top>
 </BorderPane>
